--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,8 +27,10 @@
     "next-env.d.ts",
     ".next/types/**/*.ts",
     "**/*.ts",
-    "**/*.tsx"
-, "app/layout.tsx"  ],
+    "**/*.tsx",
+    "app/layout.tsx",
+    "components/component/ndex.jsx"
+    ],
   "exclude": [
     "node_modules"
   ]
