--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@next/swc-darwin-x64": "13.4.4",
     "eslint-config-next": "13.3.0",
     "next": "13.3.0",
     "react": "18.2.0",
